--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# Compiled class file
-*.class
+# macOS
+.DS_Store
+._*
 
-# Log file
-*.log
+# Maven outputs
+.classpath
 
-# BlueJ files
-*.ctxt
+# IntelliJ
+*.iml
+.idea
+out.java
+out/
+.settings
+.project
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# auto-generated files
+target/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# our logs
+rpdk.log
