--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
     </repositories>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/software.amazon.cloudformation/aws-cloudformation-rpdk-java-plugin -->
+        <!-- https://github.com/awslabs/aws-cloudformation-rpdk-java-plugin/ -->
         <dependency>
-            <groupId>software.amazon.cloudformation</groupId>
+            <groupId>com.amazonaws.cloudformation</groupId>
             <artifactId>aws-cloudformation-rpdk-java-plugin</artifactId>
             <version>1.0</version>
         </dependency>
