--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </repositories>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/software.amazon.cloudformation/aws-cloudformation-rpdk-java-plugin -->
+	<!-- https://mvnrepository.com/artifact/software.amazon.cloudformation/aws-cloudformation-rpdk-java-plugin -->
         <dependency>
             <groupId>software.amazon.cloudformation</groupId>
             <artifactId>aws-cloudformation-rpdk-java-plugin</artifactId>
@@ -111,7 +111,7 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>cfn-cli</executable>
+                            <executable>cfn</executable>
                             <commandlineArgs>generate</commandlineArgs>
                             <workingDirectory>${project.basedir}</workingDirectory>
                         </configuration>
